[package]
name = "fantasy-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
dotenv = "0.15.0"
femme = "2.2.1"
http-types = "2.12.0"
log = "0.4.20"
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
tide = "0.16.0"
