[package]
name = "fantasy-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
http-types = "2.12.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.34.0", features = ["full"] }
