[package]
name = "fantasy-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "blocking", "multipart"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.31" , features = ["clock", "serde"] }
chrono-tz = "0.8.6"
http = "0.2.9"
actix-cors = "0.7.0"
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
google-cloud-storage = "0.20.0"
actix-multipart = "0.7.2"
uuid = { version = "1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
